--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Story of My Life</title>
+    <link rel="icon" type="image/xicon" href="media/logo.svg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='home.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +34,8 @@
         </div>
 
         <!-- From Uiverse.io by mobinkakei --> 
-<button class="cta">
+<button onclick="window.location.href=('timeline.html')"   class="cta">
+  
     <div class="span">READ</div>
     <div class="second">
       <svg
@@ -44,6 +46,7 @@
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
       >
+
         <g
           id="arrow"
           stroke="none"
