--- a/timeline.html
+++ b/timeline.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
+    <link rel="icon" type="image/xicon" href="media/logo.svg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='timeline.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,6 @@
         <div class="h-line4"></div>
         <div class="h-line5"></div>
         <div class="h-line6"></div>
-        <div class="h-line7"></div>
     </div>
 
 
@@ -49,9 +49,9 @@
     <div class="event-container">
         <div class="event">
             <div class="text">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>SINULOG 2024</h2>
+                <h3>January</h3>
+                <p>January started with the Sinulog Festival in Cebu—colorful streets, music, and non-stop dancing. I also attended mass at the Basilica del Santo Niño, a calm moment before diving back into the festivities.</p>
             </div>
             <div class="picture">
                 <img src="media/january.jpg" alt="Description of the image">
@@ -62,16 +62,16 @@
                 <img src="media/febuary.jpg" alt="Description of the image">
             </div>
             <div class="text2">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>GRANDMA'S BIRTHDAY</h2>
+                <h3>Febuary</h3>
+                <p>We also celebrated my grandma's birthday, making it a month full of good vibes and family time.</p>
             </div>
         </div>
         <div class="event3">
             <div class="text3">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>ANGARA CUP</h2>
+                <h3>April</h3>
+                <p>I joined an introduction performance with my classmates for the Angara Cup kickoff at the CTU oval in Carmen, Cebu. It was a fun way to start the event, and performing together made it even more memorable.</p>
             </div>
             <div class="picture3">
                 <img src="media/april.jpeg" alt="Description of the image">
@@ -83,16 +83,16 @@
                 <img src="media/october.jpeg" alt="Description of the image">
             </div>
             <div class="text4">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>COUSINS GET-TOGETHER</h2>
+                <h3>October</h3>
+                <p>We had a fun cousin get-together at Apollo in Liloan, Cebu. It was a day filled with good food, non-stop laughs, and catching up on each other’s lives—it’s always a good time when we're all together</p>
             </div>
         </div>
         <div class="event5">  
             <div class="text5">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>ALL SOULS' DAY</h2>
+                <h3>November</h3>
+                <p>On All Souls' Day, I visited my departed loved ones at the cemetery. I spent some quiet time reflecting, lighting candles, and saying prayers—it was a simple but meaningful way to honor and remember them.</p>
             </div>
             <div class="picture5">
                 <img src="media/november.jpg" alt="Description of the image">
@@ -104,21 +104,12 @@
                 <img src="media/december.jpg" alt="Description of the image">
             </div>
             <div class="text6">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
+                <h2>MANGROVE PLANTING</h2>
+                <h3>December</h3>
+                <p>I took part in a mangrove planting activity in Tawsan, organized in collaboration with the ICPeP and IIEE organizations. It was a rewarding experience, helping the environment while working alongside friends and volunteers.</p>
             </div>
         </div>
-        <div class="event7">  
-            <div class="text7">
-                <h2>EVENT NO. 1</h2>
-                <h3>Date</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur molestias natus fugiat magnam voluptates. Aliquam quibusdam, cum possimus beatae temporibus nisi atque rerum magnam unde laboriosam pariatur! Molestiae, dolore quas.</p>
-            </div>   
-            <div class="picture7">
-                <img src="path/to/your/image.jpg" alt="Description of the image">
-            </div>
-        </div>  
+         
         
     </div>
 
