--- a/timeline.html
+++ b/timeline.html
@@ -28,23 +28,28 @@
     <!-- body -->
 
     <div class="container">
-        <div class="word">
-            <h1>
-                <span>S</span>
-                <span>T</span>
-                <span>O</span>
-                <span>R</span>
-                <span>Y</span>&nbsp;
-                <span>O</span>
-                <span>F</span>&nbsp;
-                <span>M</span>
-                <span>Y</span>&nbsp;
-                <span>L</span>
-                <span>I</span>
-                <span>F</span>
-                <span>E</span>  
-            </h1> 
-        </div>
+        <div class="navbar">
+            <div class="word">
+                <h1>
+                    <span>S</span>
+                    <span>T</span>
+                    <span>O</span>
+                    <span>R</span>
+                    <span>Y</span>&nbsp;
+                    <span>O</span>
+                    <span>F</span>&nbsp;
+                    <span>M</span>
+                    <span>Y</span>&nbsp;
+                    <span>L</span>
+                    <span>I</span>
+                    <span>F</span>
+                    <span>E</span>  
+                </h1> 
+            </div>
+            <div class="links">
+                <a href="#">TIMELINE</a>
+            </div>
+        </div>    
     </div>
     <div class="event-container">
         <div class="event">
